sfdx-source/force-app/main/default/objects/Account_Management_Event_Log__c/Account_Management_Event_Log__c.object-meta.xml
<CustomObject>
    <description>LEM-24069: It stores the Account Management Event Log.</description>
    <label>Account Management Event Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Account Management Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Management Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>