sfdx-source/force-app/main/default/objects/Account_Management_Event_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-24069: It is used to store the Account record which will be reparented.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Management Event Logs</relationshipLabel>
    <relationshipName>Account_Management_Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>