sfdx-source/force-app/main/default/objects/Account_Management_Event_Log__c/fields/New_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Parent_Account__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-24069: It is used to store the Id of the new Parent Account.</description>
    <label>New Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Management Event Logs (New Parent Account)</relationshipLabel>
    <relationshipName>Account_Management_Event_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>