sfdx-source/force-app/main/default/objects/Account_Management_Event_Log__c/fields/New_Parent_Account_Reason__c.field-meta.xml
<CustomField>
    <fullName>New_Parent_Account_Reason__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-24069: It is used to store the reason why this store needs to be re-parented to another Business Account.</description>
    <label>New Parent Account Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>