sfdx-source/force-app/main/default/objects/Account_Management_Event_Log__c/fields/Old_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Old_Parent_Account__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-24069: It is used to store the Id of the old Parent Account.</description>
    <label>Old Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Management Event Logs (Old Parent Account)</relationshipLabel>
    <relationshipName>Account_Management_Event_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>